--- a/Coding/Projectoverview.html
+++ b/Coding/Projectoverview.html
@@ -11,6 +11,7 @@
   <ul>  
     <li><a href="AimTrainer/aimtrainer.html">Aim Trainer</a></li>
     <li><a href="magic-wand/reveal.html">Magic Wand</a></li>
+    <li><a href="cool-hover/hover.html">Cool Hover Effect</a></li>
   </ul>
 </body>
 </html>
