--- a/Coding/cool-hover/hover.html
+++ b/Coding/cool-hover/hover.html
@@ -179,10 +179,10 @@
         
       </div>
       <div class="buttons">
-        <button onclick="dislike()">
+        <button onclick="likeOrDislike('before')">
           <img src="cross.svg">
         </button>
-        <button onclick="like()">
+        <button onclick="likeOrDislike('after')">
           <img src="heart-fill.svg">
         </button>
       </div>
