--- a/Coding/Fun-Projects/start-effect/index.html
+++ b/Coding/Fun-Projects/start-effect/index.html
@@ -26,10 +26,10 @@
       </div>
     </div>
     <div class="name-fill">
-      <h1>AARON GASSMANN</h1>
+      <h1>TOM HÜTZEN</h1>
     </div>
     <div class="name">
-      <h1>AARON GASSMANN</h1>
+      <h1>TOM HÜTZEN</h1>
     </div>
   </main>
   <section id="about">
